Bug 489234 - Replace new Integer(int) with Integer.valueOf() in eclipse.platform.ui plug-ins
All example projects

Change-Id: I79d15a70863c2f5a6ba906cd98d8126a46a389ef
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>