@@ -135,11 +135,11 @@ public class StructuredContentProviderTest {
 				operation.setText("Select transformation"); //$NON-NLS-1$
 
 				createRadioButton(operation, currentFunction, "f(x) = x", //$NON-NLS-1$
-						new Integer(SomeMathFunction.OP_IDENTITY));
+						Integer.valueOf(SomeMathFunction.OP_IDENTITY));
 				createRadioButton(operation, currentFunction, "f(x) = 2 * x", //$NON-NLS-1$
-						new Integer(SomeMathFunction.OP_MULTIPLY));
+						Integer.valueOf(SomeMathFunction.OP_MULTIPLY));
 				createRadioButton(operation, currentFunction,
-						"f(x) = floor(x)", new Integer( //$NON-NLS-1$
+						"f(x) = floor(x)", Integer.valueOf( //$NON-NLS-1$
 								SomeMathFunction.OP_ROUND));
 
 				GridLayout layout = new GridLayout();
@@ -197,7 +197,7 @@ public class StructuredContentProviderTest {
 		// elements in the inputSet.
 		// We will allow the user to change the current function through a set
 		// of radio buttons
-		currentFunction = new WritableValue(realm, new Integer(
+		currentFunction = new WritableValue(realm, Integer.valueOf(
 				SomeMathFunction.OP_MULTIPLY), null);
 
 		// mathFunction implements the selected function
